2006-03-04 Scott Dattalo <scott@dattalo.com>
	* cli/ui_gpsim.cc: GlobalVerbosityAccessor verbose was declared
	twice! (Thanks to Alex Holden for pointing this out).
	
2006-02-27 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: FileContext put_address and get_address
	methods were ignoring the last line of files.
	* gui/gui_src.h: Rewrote the source browser using the gtk+-2.X
	API.
	*** NOTE *** The older version of the source browser is still
	present and enabled by default. To enable the new browser,
	'NEW_SOURCE_BROWSER' needs to be defined. (This can either be
	accomplished by ./configure or by editing gui/gui_processor.h
	* gui/gui.h, gui/gui_processor.h: Added new source window class to
	list of gui classes.
	* gui/gui_menu.cc: ifdef'd removed the source browser preference
	configuration (for now)
	* gui/gui_object.cc, gui/gui_object.h: set_name() now requires const
	char * instead of just char *.


2006-02-25 Borut Razem <borut.razem@siol.net>
	* src/p18x.cc: EEPROM sfr registers were not mapped on 16 bit pics

2006-02-20 Borut Razem <borut.razem@siol.net>
	* src/os_dependent.cc: reverted changes I made 2006-02-19,
	  since the GPSIMPATH functionality was already implemented

2006-02-20 Scott Dattalo <scott@dattalo.com>
	* src/symbol.cc: Symbol_Table::clear() crashes when the simulation
	engine is used as a stand alone library (Reported by David Saxtion).

2006-02-19 Borut Razem <borut.razem@siol.net>
	* regression/switch_test/switch_test.stc,
	  examples/modules/usart_gui/usart_gui.stc: removed .so extension
	  from "module library libgpsim_modules.so" so that it runs on WIN32
	  platform
	* src/modules.cc: made ModuleLibrary::MakeCanonicalName() a dummy
	  method on WIN32 platform. Is it really needed on *nix?
	* src/os_dependent.cc: introduced GPSIM_MODULE_PATH environment
	  variable on WIN32 platform  to define additional directories where
	  modules are searched. The search order for WIN32 is as follows: