@@ -338,8 +338,8 @@ public:
 void GetFileName(string &sPath, string &sName);
 void GetFileNameBase(string &sPath, string &sName);
 void FixupLibraryName(string &sPath);
-void * load_library(const char *library_name, char **pszError);
-void * get_library_export(const char *name, void *library_handle, char **pszError);
+void * load_library(const char *library_name, const char **pszError);
+void * get_library_export(const char *name, void *library_handle, const char **pszError);
 void free_library(void *handle);
 void free_error_message(char * pszError);
 #endif
